actualizando archivos iniciales

--- a/index.html
+++ b/index.html
@@ -3,11 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/_resets.css">
+    <link rel="stylesheet" href="./assets/css/estilo.css">
     <title>Hoteles</title>
 </head>
 <body>
-    <div></div>
-    <div></div>
-    <div></div>
-</body>
+    <div class="header" id="inicio">
+      
+      <div class="header-menu"></div>
+          <a href="#inicio">inicio</a>
+          <a href="#fligh">Vuelos</a>
+          <a href="#hotel">Tours</a>
+          <a href="#contact">Contacto</a> 
+      </div>
+
+
+    </div>
+    <div class="hoteles" id="hotel">
+        <p>probando</p>
+    </div>
+    <div class="vuelos" id="fligh">
+<p>probando</p>
+    </div>
+    <div class="contacto" id="contact">
+<p>probando</p>
+    </div>
 </html>
