modificacion de estilo boton contacto

--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap">
     <link rel="stylesheet" href="https://icono-49d6.kxcdn.com/icono.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
     <title>Travels</title>
 </head>
 <body>
 
-    
+    <div class="posicion-inicio">
+        <div class="icono_inicio">
+            <a href="#inicio"><i class="icono-caretUp"></i><a>
+        </div>
+    </div>
     <div class="header" id="inicio">
     
     <div class="container">
@@ -22,7 +27,7 @@
                 <li><a href="#inicio">Inicio</a></li>
                 <li><a href="#fligh">Vuelos</a></li>
                 <li><a href="#hotel">Hotel</a></li>
-                <li><a href="#contact">Contacto</a></li>
+                <li><a class="fondo-color" href="#contact">Contacto</a></li>
            </ul> 
         </nav>
     </div>
